[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stages/Stage1/sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Components/Player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stages/Stage1/background.gd" type="Script" id=4]
[ext_resource path="res://Stages/Stage1/stage.gd" type="Script" id=5]
[ext_resource path="res://UI/UI/ui.tscn" type="PackedScene" id=7]

[node name="stage" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[node name="next_level_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ui" parent="." instance=ExtResource( 7 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 37, 89 )

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="next_level_timer" to="." method="_on_next_level_timer_timeout"]
